- Improved app layout to include proper formatting for button spacing to look more natural - Included interest tags below password to indicate which interest is used to generate the password with ease - Improved algorithm for generating password to ensure that the interest used to generate the password is unique - Removed code redundancy

--- a/src/styles.css
+++ b/src/styles.css
@@ -60,6 +60,10 @@ div [class*="right floated"] {
     width: 100%;
 }
 
+.mt-10 {
+    margin-top: 10px;
+}
+
 .mt-50 {
     margin-top: 50px;
 }
